<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_image_height"
            android:background="@android:color/white"
            android:scaleType="fitCenter" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/negative_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:padding="@dimen/large_padding">

                    <TextView
                        android:id="@+id/item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/free_shipping_notice"
                        android:textColor="@color/notice" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/background" />

                <TextView
                    android:id="@+id/item_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/large_padding" />


                <TextView
                    android:id="@+id/item_out_of_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/large_padding"
                    android:paddingEnd="@dimen/large_padding"
                    android:paddingStart="@dimen/large_padding"
                    android:text="@string/warning_out_of_stock"
                    android:textColor="@color/error"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/item_colors_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/large_padding"
                    android:paddingEnd="@dimen/large_padding"
                    android:paddingStart="@dimen/large_padding">

                    <TextView
                        style="@style/BoldBlack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_colours" />

                    <LinearLayout
                        android:id="@+id/item_colors"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/item_size_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/large_padding"
                    android:paddingEnd="@dimen/large_padding"
                    android:paddingStart="@dimen/large_padding">

                    <TextView
                        style="@style/BoldBlack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_size" />

                    <TextView
                        android:id="@+id/item_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3" />
                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/large_padding">

                <TextView
                    style="@style/BoldBlack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:text="@string/label_rate_the_product" />

                <RatingBar
                    android:id="@+id/rating"
                    style="@android:style/Widget.Material.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:progressTint="@color/star"
                    android:secondaryProgressTint="@color/star" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/add_to_wishlist"
            style="@style/CTAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/cta_add_to_wishlist" />

        <Button
            android:id="@+id/remove_from_wishlist"
            style="@style/CTAButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/small_padding"
            android:backgroundTint="@android:color/black"
            android:text="@string/cta_remove_from_wishlist" />
    </LinearLayout>
</ScrollView>